--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Poem Diary by LPS</title>
   </head>
-  <body>
+  <body style="background-color=gray;">
+    <h1 style="text-align: center;">A Blog by LP Sucrose</h1>
     <div class="nav">
+    </div>
+    
   </body>
 </html>
