--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
+<html >
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Poem Diary by LPS</title>
+    <style>
+      @font-face{
+          font-family: Courier;
+          src: Courier.ttf;
+      }
+    </style>
   </head>
-  <body style="background-color=gray;">
+  <body style="background-color=gray; font-family: Courier; !important">
     <h1 style="text-align: center;">A Blog by LP Sucrose</h1>
     <div class="nav">
     </div>
