--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       .sign{
           align: right;
       }
+      img {
+          width: 60%;
+          height: auto;
+      }
     </style>
   </head>
   <body style="background-color:gray; font-family: Courier; !important">
