--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
           margin-left: auto;
           margin-right: auto;
           width: 70%;
+          color: orange;
       }
       .container1{
           height: auto;
           width: auto;
           overflow-y: scroll;
-        background-color: #909050;
+          background-color: #909050;
+      }
+      .container2{
+          margin-left: auto;
+          margin-right: auto;
+          width: 70%;
+          overflow-y: scroll;
+          background-color: #C0C0C0;
+          color: white;
       }
       .sign{
-          align: right;
+          text-align: right;
       }
       img {
           height: 30%;
           width: auto;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
       }
     </style>
   </head>
@@ -37,6 +49,13 @@
           <p class="sign">-LPS</p>
         </div>
     </div>
-    
+    <h1 style="text-align: center;">About</h1>
+    <div class="container2">
+      <ul>
+        <li>This is a mental health blog established on 10-11-2021.</li>
+        <li>I post depressing poetry to cope.</li>
+      </ul>
+    </div>
+    <h2>Contact: <a href="mailto:lpsucrose@gmail.com">lpsucrose@gmail.com</a></h2>
   </body>
 </html>
