--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
           width: auto;
           overflow-y: scroll;
           background-color: #909050;
+          color: white;
       }
       .container2{
+          display: block;
           margin-left: auto;
           margin-right: auto;
           width: 70%;
@@ -32,8 +34,8 @@
           text-align: right;
       }
       img {
-          height: 30%;
-          width: auto;
+          width: 30%;
+          height: auto;
           display: block;
           margin-left: auto;
           margin-right: auto;
