--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
           margin-left: auto;
           margin-right: auto;
           width: 70%;
-          color: orange;
       }
       .container1{
-          height: auto;
+          height: 60%;
           width: auto;
           overflow-y: scroll;
           background-color: #909050;
@@ -34,7 +33,7 @@
           text-align: right;
       }
       img {
-          width: 30%;
+          width: 35%;
           height: auto;
           display: block;
           margin-left: auto;
@@ -58,6 +57,6 @@
         <li>I post depressing poetry to cope.</li>
       </ul>
     </div>
-    <h2>Contact: <a href="mailto:lpsucrose@gmail.com">lpsucrose@gmail.com</a></h2>
+    <h2 style="text-align: center; color: white;">Contact: <a href="mailto:lpsucrose@gmail.com">lpsucrose@gmail.com</a></h2>
   </body>
 </html>
