--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 70%;
-          overflow-y: scroll;
+          width: 80%;
           background-color: #C0C0C0;
           color: white;
       }
@@ -34,11 +33,19 @@
           text-align: right;
       }
       img {
-          width: 35%;
+          width: 70%;
           height: auto;
           display: block;
           margin-left: auto;
           margin-right: auto;
+      }
+      h2{
+          text-align: center;
+          color: white;
+      }
+      h1{
+          text-align: center;
+          color: white;
       }
     </style>
   </head>
@@ -58,6 +65,6 @@
         <li>I post depressing poetry to cope.</li>
       </ul>
     </div>
-    <h2 style="text-align: center; color: white;">Contact: <a href="mailto:lpsucrose@gmail.com">lpsucrose@gmail.com</a></h2>
+    <h2>Contact: <a href="mailto:lpsucrose@gmail.com">lpsucrose@gmail.com</a></h2>
   </body>
 </html>
